# projet_quizz

./: CMakeLists.txt  README.md  evaluationAdaptative.cpp  evaluationAdaptative.h  evaluationAdaptativeTests.cpp  evaluationSecondeChance.cpp  evaluationSecondeChance.h  evaluationSecondeChanceTests.cpp  evaluationTest.cpp  evaluationTest.h  evaluationTestTests.cpp  gestionnaire.cpp  gestionnaire.h  gestionnaireTest.cpp  main.cpp  question.cpp  question.h  questionChoixMultiples.cpp  questionChoixMultiples.h  questionChoixMultiplesTest.cpp  questionChoixMultiplesTests.cpp  questionNumerique.cpp  questionNumerique.h  questionNumeriqueTest.cpp  questionRepertoire.cpp  questionRepertoire.h  questionRepertoireTest.cpp  questionTexte.cpp  questionTexte.h  questionTexteTest.cpp  questionnaire.cpp  questionnaire.h  questionnaireTest.cpp  session.cpp  session.h  sessionApprentissage.cpp  sessionApprentissage.h  sessionEvaluation.cpp  sessionEvaluation.h  sessionTest.cpp
